--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -1,20 +1,26 @@
 spring:
+  # 数据源配置
   datasource:
     username: root
     password: root
     url: jdbc:mysql://192.168.56.10:3306/grain_mall_pms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
   cloud:
+    # nacos注册中心
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  # 应用名称
   application:
     name: mall-product
 
+# mybatis配置信息
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+
+# 服务端口
 server:
   port: 10001
