--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -10,11 +10,10 @@ spring:
         server-addr: 127.0.0.1:8848
     gateway:
       routes:
-        - id: test_route
-          uri: https://www.baidu.com
+        - id: admin_route
+          uri: lb://renren-fast
           predicates:
-            - Query=url,baidu
-        - id: qq_route
-          uri: https://www.qq.com
-          predicates:
-            - Query=url,qq
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/(?<segment>/?.*), /renren-fast/$\{segment}
+# 前端项目 /api
