--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -52,6 +52,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.grain.mall</groupId>
+			<artifactId>mall-common</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
