--- a/mall-ui/grain-mall-vue/package.json
+++ b/mall-ui/grain-mall-vue/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "renren-fast-vue",
+  "name": "grain-mall-vue",
   "version": "1.2.2",
-  "description": "renren-fast-vue基于vue、element-ui构建开发，实现renren-fast后台管理前端功能，提供一套更优的前端解决方案。",
+  "description": "grain-mall-vue基于vue、element-ui构建开发，实现后台管理前端功能，提供一套更优的前端解决方案。",
   "author": "daxiong.yang <daxiong.yang@qq.com>",
   "private": true,
   "scripts": {
@@ -26,7 +26,7 @@
     "lodash": "4.17.5",
     "node-sass": "^4.14.1",
     "npm": "^6.9.0",
-    "pubsub-js": "^1.8.0",
+    "pubsub-js": "^1.7.0",
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
@@ -47,7 +47,7 @@
     "babel-preset-stage-2": "6.22.0",
     "babel-register": "6.22.0",
     "chalk": "2.3.0",
-    "chromedriver": "2.27.2",
+    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "4.0.1",
     "cross-spawn": "5.0.1",
     "css-loader": "0.28.0",
