商城业务-nginx-搭建域名访问环境二（负载均衡到网关）

--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -44,4 +44,9 @@ spring:
             - Path=/api/**
           filters:
             - RewritePath=/api/(?<segment>/?.*), /renren-fast/$\{segment}
+
+        - id: grain_mall_host_route
+          uri: lb://mall-product
+          predicates:
+            - Host=**.grainmall.com,grainmall.com
 # 前端项目 /api
