缓存-SpringCache-整合

--- a/mall-product/pom.xml
+++ b/mall-product/pom.xml
@@ -79,6 +79,13 @@
             <version>3.12.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cache -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+
 
 
     </dependencies>
