--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -48,7 +48,7 @@ spring:
         - id: grain_mall_host_route
           uri: lb://mall-product
           predicates:
-            - Host=grainmall.com
+            - Host=grainmall.com,item.grainmall.com
 
         - id: grain_mall_search_route
           uri: lb://mall-search
