--- a/mall-auth-server/src/main/resources/application.properties
+++ b/mall-auth-server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 server.port=13001
 
 spring.thymeleaf.cache=false
+
+spring.redis.host=192.168.31.70
+spring.redis.port=6379
