--- a/mall-product/src/main/resources/application.properties
+++ b/mall-product/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.cache.redis.use-key-prefix=true
 # \u662F\u5426\u7F13\u5B58\u7A7A\u503C\u3002\u9632\u6B62\u7F13\u5B58\u7A7F\u900F
 spring.cache.redis.cache-null-values=true
 
+spring.session.store-type=redis
+
 grain.mall.thread.core-size=20
 grain.mall.thread.max-size=200
 grain.mall.thread.keep-alive-time=10
