--- a/mall-search/src/main/resources/application.properties
+++ b/mall-search/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 server.port=12001
 
 spring.thymeleaf.cache=false
+
+spring.redis.host=192.168.31.70
+spring.redis.port=6379
+
+spring.session.store-type=redis
