--- a/mall-cart/src/main/resources/application.properties
+++ b/mall-cart/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.redis.host=192.168.31.70
 spring.redis.port=6379
 
 spring.session.store-type=redis
+
+grain.mall.thread.core-size=20
+grain.mall.thread.max-size=200
+grain.mall.thread.keep-alive-time=10
+
