商城业务-订单服务-页面环境搭建

--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -64,4 +64,9 @@ spring:
           uri: lb://mall-cart
           predicates:
             - Host=cart.grainmall.com
+
+        - id: grain_mall_order_route
+          uri: lb://mall-order
+          predicates:
+            - Host=order.grainmall.com
 # 前端项目 /api
