--- a/mall-order/src/main/resources/application.properties
+++ b/mall-order/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.rabbitmq.template.mandatory=true
 
 # \u624B\u52A8ack\u6D88\u606F
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+spring.redis.host=192.168.31.70
+spring.redis.port=6379
+
+spring.session.store-type=redis
+
+grain.mall.thread.core-size=20
+grain.mall.thread.max-size=200
+grain.mall.thread.keep-alive-time=10
