--- a/mall-ware/src/main/resources/application.properties
+++ b/mall-ware/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.rabbitmq.host=192.168.31.70
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
 
+# \u624B\u52A8ack\u6D88\u606F
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
