商城业务-订单服务-支付成功同步回调

--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -69,4 +69,9 @@ spring:
           uri: lb://mall-order
           predicates:
             - Host=order.grainmall.com
+
+        - id: grain_mall_member_route
+          uri: lb://mall-member
+          predicates:
+            - Host=member.grainmall.com
 # 前端项目 /api
