商城业务-订单服务-支付完成

--- a/mall-order/src/main/resources/application.properties
+++ b/mall-order/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.session.store-type=redis
 grain.mall.thread.core-size=20
 grain.mall.thread.max-size=200
 grain.mall.thread.keep-alive-time=10
+
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
