--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
         server-addr: 127.0.0.1:8848
   application:
     name: mall-member
+  # jackson时间格式化
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
