--- a/mall-ware/src/main/resources/application.yml
+++ b/mall-ware/src/main/resources/application.yml
@@ -10,7 +10,9 @@ spring:
         server-addr: 127.0.0.1:8848
   application:
     name: mall-ware
+  # jackson时间格式化
   jackson:
+    time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
 
 mybatis-plus:
