统一jackson时间格式化

--- a/mall-cart/src/main/resources/application.yml
+++ b/mall-cart/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: mall-cart
+  # jackson时间格式化
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
   cloud:
     nacos:
       discovery:
