--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -10,7 +10,9 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  # jackson时间格式化
   jackson:
+    time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
   thymeleaf:
     cache: false
