商城业务-秒杀服务-整合定时任务与异步任务实现秒杀商品上架

--- a/mall-coupon/src/main/resources/bootstrap.properties
+++ b/mall-coupon/src/main/resources/bootstrap.properties
@@ -1,5 +1,5 @@
-spring.application.name=mall-coupon
-spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+#spring.application.name=mall-coupon
+#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 #spring.cloud.nacos.config.namespace=e3cc91c0-00bd-40fc-98b8-bb305ee0a72f
 #spring.cloud.nacos.config.group=dev
 
