商城业务-秒杀服务-查询秒杀商品

--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -81,4 +81,9 @@ spring:
           uri: lb://mall-member
           predicates:
             - Host=member.grainmall.com
+
+        - id: grain_mall_seckill_route
+          uri: lb://mall-seckill
+          predicates:
+            - Host=seckill.grainmall.com
 # 前端项目 /api
