--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -123,6 +123,11 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
