Sentinel-全服务引入

--- a/mall-cart/src/main/resources/application.properties
+++ b/mall-cart/src/main/resources/application.properties
@@ -9,3 +9,6 @@ grain.mall.thread.core-size=20
 grain.mall.thread.max-size=200
 grain.mall.thread.keep-alive-time=10
 
+spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
+management.endpoints.web.exposure.include=*
+
