--- a/mall-ware/src/main/resources/application.properties
+++ b/mall-ware/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.rabbitmq.virtual-host=/
 
 # \u624B\u52A8ack\u6D88\u606F
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
+management.endpoints.web.exposure.include=*
