--- a/mall-auth-server/src/main/resources/application.properties
+++ b/mall-auth-server/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.redis.port=6379
 
 spring.session.store-type=redis
 server.servlet.session.timeout=30m
+
+spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
+management.endpoints.web.exposure.include=*
