--- a/mall-member/src/main/resources/application.properties
+++ b/mall-member/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.thymeleaf.cache=false
 spring.session.store-type=redis
 spring.redis.host=192.168.31.70
 spring.redis.port=6379
+
+spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
+management.endpoints.web.exposure.include=*
