--- a/mall-order/src/main/resources/application.properties
+++ b/mall-order/src/main/resources/application.properties
@@ -21,3 +21,6 @@ grain.mall.thread.max-size=200
 grain.mall.thread.keep-alive-time=10
 
 spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+
+spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
+management.endpoints.web.exposure.include=*
