--- a/mall-search/pom.xml
+++ b/mall-search/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!--   导入elasticsearch的rest-high-level-client  -->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
