--- a/mall-search/src/main/resources/application.properties
+++ b/mall-search/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.redis.host=192.168.31.70
 spring.redis.port=6379
 
 spring.session.store-type=redis
+
+spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
+management.endpoints.web.exposure.include=*
