--- a/mall-seckill/src/main/resources/application.yml
+++ b/mall-seckill/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         server-addr: 127.0.0.1:8848
     sentinel:
       transport:
-        dashboard: localhost:8888
+        dashboard: 192.168.31.70:8888
         port: 8719
   redis:
     host: 192.168.31.70
