--- a/mall-auth-server/src/main/resources/application.properties
+++ b/mall-auth-server/src/main/resources/application.properties
@@ -12,3 +12,5 @@ server.servlet.session.timeout=30m
 
 spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
 management.endpoints.web.exposure.include=*
+
+feign.sentinel.enabled=true
