--- a/mall-cart/src/main/resources/application.properties
+++ b/mall-cart/src/main/resources/application.properties
@@ -12,3 +12,5 @@ grain.mall.thread.keep-alive-time=10
 spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
 management.endpoints.web.exposure.include=*
 
+feign.sentinel.enabled=true
+
