--- a/mall-coupon/src/main/resources/application.properties
+++ b/mall-coupon/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
 management.endpoints.web.exposure.include=*
+
+feign.sentinel.enabled=true
