--- a/mall-member/src/main/resources/application.properties
+++ b/mall-member/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.redis.port=6379
 
 spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
 management.endpoints.web.exposure.include=*
+
+feign.sentinel.enabled=true
