--- a/mall-order/src/main/resources/application.properties
+++ b/mall-order/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 
 spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
 management.endpoints.web.exposure.include=*
+
+feign.sentinel.enabled=true
