--- a/mall-search/src/main/resources/application.properties
+++ b/mall-search/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.session.store-type=redis
 
 spring.cloud.sentinel.transport.dashboard=192.168.31.70:8888
 management.endpoints.web.exposure.include=*
+
+feign.sentinel.enabled=true
