--- a/mall-third-party/src/main/resources/application.yml
+++ b/mall-third-party/src/main/resources/application.yml
@@ -5,6 +5,17 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  # 服务追踪
+  zipkin:
+    # zipkin服务的地址
+    base-url: http://192.168.31.70:9411/
+    # 关闭服务发现，否则Spring Cloud会把zipkin的url当做服务名称
+    discovery-client-enabled: false
+    sender:
+      type: web # 设置使用http的方式传输数据
+  sleuth:
+    sampler:
+      probability: 1 # 设置抽样采集率为100%，默认为0.1，即10%
 #    alicloud:
 #      access-key: *********
 #      secret-key: *********
