--- a/mall-coupon/src/main/resources/bootstrap.properties
+++ b/mall-coupon/src/main/resources/bootstrap.properties
@@ -1,6 +1,5 @@
-#spring.application.name=mall-coupon
-#spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-#spring.cloud.nacos.config.namespace=e3cc91c0-00bd-40fc-98b8-bb305ee0a72f
+spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=e3cc91c0-00bd-40fc-98b8-bb305ee0a72f
 #spring.cloud.nacos.config.group=dev
 
 #spring.cloud.nacos.config.ext-config[0].data-id=datasource.yml
