--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -1,4 +1,9 @@
+server:
+  port: 8002
+
 spring:
+  application:
+    name: mall-member
   datasource:
     username: root
     password: root
@@ -8,6 +13,16 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: 192.168.31.70:8888
+  redis:
+    host: 192.168.31.70
+    port: 6379
+  session:
+    store-type: redis
+  thymeleaf:
+    cache: false
   # 服务追踪
   zipkin:
     # zipkin服务的地址
@@ -19,8 +34,6 @@ spring:
   sleuth:
     sampler:
       probability: 1 # 设置抽样采集率为100%，默认为0.1，即10%
-  application:
-    name: mall-member
   # jackson时间格式化
   jackson:
     time-zone: GMT+8
@@ -32,5 +45,12 @@ mybatis-plus:
     db-config:
       id-type: auto
 
-server:
-  port: 8002
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+feign:
+  sentinel:
+    enabled: true
