--- a/mall-auth-server/src/main/resources/application.yml
+++ b/mall-auth-server/src/main/resources/application.yml
@@ -1,10 +1,25 @@
-# 配置社交登录相关信息
-#social:
-#  weibo:
-#    app-key: 你的微博开发者中心提供的App Key
-#    app-secret: 你的微博开发者中心提供的App Secret
-#    redirect-uri: 你的微博开发者中心创建的应用的授权回调页
+server:
+  port: 13001
 spring:
+  application:
+    name: mall-auth-server
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+      config:
+        server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: 192.168.31.70:8888
+  redis:
+    host: 192.168.31.70
+    port: 6379
+  session:
+    store-type: redis
+  servlet:
+    session:
+      timeout: 30m
   # 服务追踪
   zipkin:
     # zipkin服务的地址
@@ -16,3 +31,19 @@ spring:
   sleuth:
     sampler:
       probability: 1 # 设置抽样采集率为100%，默认为0.1，即10%
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+feign:
+  sentinel:
+    enabled: true
+
+# 配置社交登录相关信息
+#social:
+#  weibo:
+#    app-key: 你的微博开发者中心提供的App Key
+#    app-secret: 你的微博开发者中心提供的App Secret
+#    redirect-uri: 你的微博开发者中心创建的应用的授权回调页
