--- a/mall-coupon/src/main/resources/application.yml
+++ b/mall-coupon/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: 192.168.31.70:8888
   # 服务追踪
   zipkin:
     # zipkin服务的地址
@@ -34,3 +37,13 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+feign:
+  sentinel:
+    enabled: true
