--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -8,6 +8,13 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: 192.168.31.70:8888
+      scg:
+        fallback:
+          response-status: 400
+    # 前端项目 /api
     gateway:
       routes:
         - id: product_route
@@ -97,4 +104,9 @@ spring:
   sleuth:
     sampler:
       probability: 1 # 设置抽样采集率为100%，默认为0.1，即10%
-# 前端项目 /api
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
