--- a/mall-gateway/src/main/resources/bootstrap.properties
+++ b/mall-gateway/src/main/resources/bootstrap.properties
@@ -1,6 +1,5 @@
-spring.application.name=mall-gateway
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-#spring.cloud.nacos.config.namespace=229f2760-4f55-4828-bef4-b7b1acd117e6
+spring.cloud.nacos.config.namespace=229f2760-4f55-4828-bef4-b7b1acd117e6
 #spring.cloud.nacos.config.group=dev
 
 #spring.cloud.nacos.config.ext-config[0].data-id=mall-gateway.yml
