--- a/mall-seckill/src/main/resources/application.yml
+++ b/mall-seckill/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 15001
+
 spring:
   application:
     name: mall-seckill
@@ -36,8 +39,15 @@ spring:
     template:
       mandatory: true
 
-server:
-  port: 15001
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+feign:
+  sentinel:
+    enabled: true
 
 logging:
   level:
