--- a/mall-admin/docker-compose.yml
+++ b/mall-admin/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
-  renren-fast:
-    image: renren/fast
+  mall-admin:
+    image: mall/admin
     ports:
       - "8080:8080"
     environment:
